[package]
name = "v8unpack"
description = "Unpack, pack, deflate and inflate 1C v8 file (*.cf)"
version = "0.2.0"
authors = ["Andreev Alexander <andreevlex.as@gmail.com>"]
homepage = "https://github.com/andreevlex/v8unpack-rs"
repository = "https://github.com/andreevlex/v8unpack-rs"
keywords = ["parser", "binary", "1cd"]
readme = "README.md"
license = "MIT"

[dependencies]
clap = "2.28.0"
env_logger = "0.5"
v8unpack4rs = { path = "../v8unpack4rs" }