[package]
name = "v8unpack"
description = "Unpack, pack, deflate and inflate 1C v8 file (*.cf)"
version = "0.3.0"
authors = ["Andreev Alexander <andreevlex.as@gmail.com>"]
homepage = "https://github.com/andreevlex/v8unpack-rs"
repository = "https://github.com/andreevlex/v8unpack-rs"
keywords = ["parser", "binary", "1cd"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
clap = "2.32.0"
fern = "0.5.7"
log = "0.4.6"
chrono = "0.4.6"
v8unpack4rs = "0.3.0"