[package]
name = "v8unpack4rs"
description = "Unpack, pack, deflate and inflate 1C v8 file (*.cf)"
authors = ["Andreev Alexander <andreevlex.as@gmail.com>"]
version = "0.2.1"
homepage = "https://github.com/andreevlex/v8unpack-rs"
repository = "https://github.com/andreevlex/v8unpack-rs"
keywords = ["parser", "binary", "1cd"]
readme = "README.md"
license = "MIT"

[dependencies]
deflate = "0.7.17"
inflate = "0.3.3"
byteorder = "1.2.1"
encoding = "0.2.33"
log = "0.4"

[dev-dependencies]
tempdir = "0.3.7"

[lib]
crate_type = ["rlib", "cdylib"]